"finalisé avec mauvaise typo logo"

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     <footer class="footerFaceBook">
         <div class="footer-container">
             <div class="footer-blocs">
-                <div class="PremièreLigne">
-                    <a href="#">Français (France)</a>
-                    <a href="#">English (US)</a>
+                <div class="PremièreLigne wordSpacing6">
+                    <a href="#" class="noWordSpacing">Français (France)</a>
+                    <a href="#" class="noWordSpacing">English (US)</a>
                     <a href="#">Español</a>
                     <a href="#">Türkçe</a>
-                    <a href="#">Português (Portugal)</a>
+                    <a href="#" class="noWordSpacing">Português (Portugal)</a>
                     <a href="#">العربي</a>
                     <a href="#">Italiano</a>
                     <a href="#">Deutsch</a>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="secondeLigne">
                     <a href="#">S’inscrire</a>
-                    <a href="#">Se connecter</a>
+                    <a href="#" class="noWordSpacing">Se connecter</a>
                     <a href="#">Messenger</a> 
                     <a href="#">Facebook</a> 
                     <a href="#">Lite</a> 
@@ -75,28 +75,28 @@
                     <a href="#">Lieux</a> 
                     <a href="#">Jeux</a> 
                     <a href="#">Marketplace</a> 
-                    <a href="#">Facebook Pay</a> 
-                    <a href="#">Offres d’emploi</a> 
+                    <a href="#" class="noWordSpacing">Facebook Pay</a> 
+                    <a href="#" class="noWordSpacing">Offres d’emploi</a> 
                     <a href="#">Oculus</a> 
                     <a href="#">Portal</a> 
                     <a href="#">Instagram</a> 
                     <a href="#">Local</a>
                 </div>
                 <div class="troisièmeLigne">
-                    <a href="#">Collectes de fonds</a>
+                    <a href="#" class="noWordSpacing">Collectes de fonds</a>
                     <a href="#">Services</a> 
-                    <a href="#">Centre d’information sur les élections</a> 
-                    <a href="#">À propos</a>
-                    <a href="#">Créer une publicité</a> 
-                    <a href="#">Créer une Page</a> 
+                    <a href="#" class="noWordSpacing">Centre d’information sur les élections</a> 
+                    <a href="#" class="noWordSpacing">À propos</a>
+                    <a href="#" class="noWordSpacing">Créer une publicité</a> 
+                    <a href="#" class="noWordSpacing">Créer une Page</a> 
                     <a href="#">Développeurs</a> 
                     <a href="#">Emplois</a> 
                     <a href="#">Confidentialité</a>
                 </div>
                 <div class="quatrièmeLigne">
                     <a href="#">Cookies</a>
-                    <a href="#">Choisir sa pub</a>
-                    <a href="#">Conditions générales</a>
+                    <a href="#" class="noWordSpacing">Choisir sa pub</a>
+                    <a href="#" class="noWordSpacing">Conditions générales</a>
                     <a href="#">Aide</a>
                 </div>
                 <div class="cinquièmeLigne">
